syntax = "proto3";

package session.v1alpha1;

import "google/api/annotations.proto";

message Date {
    int32 day = 1;
    int32 month = 2;
    int32 year = 3;
}

enum Gender {
    GENDER_UNSPECIFIED = 0;
    GENDER_MALE = 1;
    GENDER_FEMALE = 2;
}

message User {
    string user_id = 1 [json_name = "userID"];
    string first_name = 2;
    string last_name = 3;
    Date birthday = 4;
    Gender gender = 5;
}

message GetUserRequest {
    string user_id = 1 [json_name = "userID"];
}

message GetUserResponse {
    User user = 1;
}

service SessionService {
    rpc GetUser(GetUserRequest) returns (GetUserResponse) {
        option (google.api.http) = {
            get: "/api/v1alpha1/session/users/{user_id}"
        };
    }
}